# cycling-tour-planner

./: .gitignore  ARCHITECTURE.md  Brand Guide.md  Cycle Tour Planner PRD.md  Cycle_Tour_Planner_PRD.md  README.md  ROADMAP.md  UX.md
.github/workflows/: desktop-build.yml
assets/rasters/: rasters_GEDTM30.tar.gz.properties
backend/: main.py  pyproject.toml  sidecar_entrypoint.py
backend/ctp_core/: elevation.py  export.py  graph.py  providers.py  routing.py  scoring.py  types.py
backend/ctp_service/: app.py  config.py  schemas.py
backend/tests/: conftest.py  test_api.py  test_elevation.py  test_export.py  test_graph.py  test_no_fastapi_in_core.py  test_routing.py  test_scoring.py
client/: .metadata  pubspec.yaml
client/android/app/: build.gradle.kts
client/integration_test/: app_test.dart
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart
client/lib/config/: app_config.dart
client/lib/data/: routing_client.dart
client/lib/domain/: route.dart  theme.dart
client/lib/presentation/screens/: manage_data_screen.dart  route_planner_screen.dart
client/lib/presentation/widgets/: route_map.dart  search_bar.dart  theme_picker.dart
client/lib/state/: routing_providers.dart
client/linux/: CMakeLists.txt
client/test/: widget_test.dart
client/test/domain/: route_result_test.dart
client/test/fakes/: fake_routing_client.dart
client/test/presentation/: route_map_test.dart  theme_picker_test.dart
client/windows/runner/: Runner.rc
wireframes/: README.md  Wireframes.dc.html
(+1 files in other folders)
